<resources>
    <!--App headers strings-->
    <string name="app_name">Organiser</string>
    <string name="title_activity_task_list">Task list</string>
    <string name="title_activity_task_details">Task details</string>
    <string name="title_activity_task_filters">Task filter</string>
    <string name="title_activity_task_categories">Task categories</string>

    <!--Task List strings-->
    <string name="task_list_due">Due: </string>
    <string name="task_list_left">Left: </string>
    <string name="task_list_completed">Completed</string>
    <string name="task_list_cancelled">Cancelled</string>
    <string name="task_list_overdue">Overdue</string>
    <string name="task_list_expiring">Expiring</string>
    <string name="task_list_created">Due: </string>
    <string name="task_list_lasts">Task lasts: </string>
    <string name="task_list_less_hour">less than an hour</string>
    <string name="task_list_priority_description">TaskPriority</string>
    <string name="task_list_category_description">TaskCategory</string>

    <!--Task Details strings-->
    <string-array name="task_details_task_types">
        <item>Default</item>
        <item>Scheduled</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string name="task_details_default_task_type">Default task</string>
    <string name="task_details_scheduled_task_type">Scheduled task</string>
    <string name="task_details_daily_task_type">Daily task</string>
    <string name="task_details_weekly_task_type">Weekly task</string>
    <string name="task_details_monthly_task_type">Monthly task</string>
    <string name="task_details_yearly_task_type">Yearly task</string>
    <string name="task_details_mon">Mon</string>
    <string name="task_details_tue">Tue</string>
    <string name="task_details_wed">Wed</string>
    <string name="task_details_thu">Thu</string>
    <string name="task_details_fri">Fri</string>
    <string name="task_details_sat">Sat</string>
    <string name="task_details_sun">Sun</string>
    <string name="task_hint_name">Task name</string>
    <string name="task_hint_task_type">Type:</string>
    <string name="task_hint_priority">Priority:</string>
    <string name="task_hint_category">Category:</string>
    <string name="task_hint_time_options">Scheduled?</string>
    <string name="task_hint_from">From</string>
    <string name="task_hint_to">To</string>
    <string name="task_hint_details">Details</string>
    <string name="task_button_create">Create</string>
    <string name="task_button_finish">Close</string>
    <string name="task_button_save">Save</string>
    <string name="task_button_delete">Remove</string>

    <!--Tasks Menu strings-->
    <string name="task_option_categories">Categories</string>
    <string name="task_option_filter_tasks">Filter</string>
    <string name="task_option_completed_tasks">Show completed</string>
    <string name="task_option_failed_tasks">Show Overdue</string>

    <!--Task Filter strings-->
    <string name="task_filter_show_completed">Show completed</string>
    <string name="task_filter_show_overdue">Show overdue</string>
    <string name="task_filter_end_by">End by:</string>
    <string name="task_filter_end_by_hint">Select date</string>
    <string name="task_filter_container_priority">Priority: </string>
    <string name="task_filter_container_category">Category: </string>
</resources>
