<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="4dp">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/task_priority_icon"
            android:layout_width="4dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/task_status_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/task_list_priority_description"/>

        <ImageView
            android:id="@+id/task_category_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/task_list_category_description"
            app:layout_constraintBottom_toBottomOf="@id/task_priority_icon"
            app:layout_constraintStart_toEndOf="@id/task_priority_icon"
            app:layout_constraintTop_toTopOf="@id/task_priority_icon" />

        <TextView
            android:id="@+id/task_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:minLines="1"
            android:text="Task title"
            android:textSize="28sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/task_category_icon"
            app:layout_constraintWidth_default="wrap" />
        <TextView
            android:id="@+id/task_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorTextHint"
            android:textSize="10sp"
            android:text="Status text"/>
        <TextView
            android:id="@+id/task_time_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@id/task_title_text"
            app:layout_constraintTop_toBottomOf="@id/task_title_text"
            app:layout_constraintBottom_toBottomOf="@id/task_priority_icon"
            android:text="@string/task_list_due"
            android:textColor="@color/colorTextHint"/>
        <TextView
            android:id="@+id/task_time_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@id/task_time_label"
            app:layout_constraintTop_toBottomOf="@id/task_title_text"
            app:layout_constraintBottom_toBottomOf="@id/task_priority_icon"
            android:textColor="@color/colorTextHint"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
